Resolved User Manager > Edit/Delete not showing icons on hover

--- a/Master/Appleseed/WebSites/Appleseed/Design/jqueryUI/Appleseed/jquery-ui.css
+++ b/Master/Appleseed/WebSites/Appleseed/Design/jqueryUI/Appleseed/jquery-ui.css
@@ -1074,7 +1074,7 @@ a.ui-button:active,
 .ui-state-focus .ui-icon,
 .ui-button:hover .ui-icon,
 .ui-button:focus .ui-icon {
-	background-image: url("images/ui-icons_555555_256x240.png");
+	/*background-image: url("images/ui-icons_555555_256x240.png");*/
 }
 .ui-state-active .ui-icon,
 .ui-button:active .ui-icon {
@@ -1082,7 +1082,7 @@ a.ui-button:active,
 }
 .ui-state-highlight .ui-icon,
 .ui-button .ui-state-highlight.ui-icon {
-	background-image: url("images/ui-icons_777620_256x240.png");
+	/*background-image: url("images/ui-icons_777620_256x240.png");*/
 }
 .ui-state-error .ui-icon,
 .ui-state-error-text .ui-icon {
